# Porcurment

./: .env.example  .gitignore  .mcp.json  README.md  app.py  package-lock.json  package.json  pyproject.toml  run.sh  telegram_bot.py
docs/: history.html  index.html  results.html
docs/css/: animations.css  base.css  components.css  layout.css  variables.css  views.css
docs/js/: api.js  app.js  components.js  icons.js  views.js
scripts/: setup.sh
src/agents/: definitions.py
src/config/: settings.py
src/crews/: analysis_crew.py  search_crew.py
src/db/: models.py
src/flows/: main_flow.py
src/tasks/: definitions.py
src/tools/: deal_scraper.py  email_tool.py  price_comparator.py  web_search.py
src/ui/: components.py  state.py
static/css/: style.css
static/js/: app.js
templates/: base.html  history.html  home.html  results.html
